--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B.D. Public School</title>
     <script defer src="https://kit.fontawesome.com/40bc81af5c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/global.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <meta
+        name="description"
+        content="B.D. Public School, Affiliated to <b>CBSE</b>, is run under the aegis of Budha Vikash Samiti. The zenith which the school has been able to reach is largely due to the untiring effort and devotion of Shri Sheo Bihari Roy whose services the school still enjoys as its Director."
+    >
+    <link rel="stylesheet" href="./static/css/global.css">
+    <link rel="stylesheet" href="./static/css/style.css">
+    <link rel="icon" type="image/x-icon" href="./static/img/bdps_logo_4.webp">
 </head>
 <body>
     <nav>
@@ -16,7 +21,7 @@
             <li class="dropdown-nav-li">
                 about us<i class="fa fa-angle-down"></i>
                 <ul>
-                    <li><a href="">Aims & Objectives</a></li>
+                    <li><a href="./pages/aims.html">Aims & Objectives</a></li>
                     <li><a href="">Our Constitution</a></li>
                     <li><a href="">Director Message</a></li>
                     <li><a href="">School Managing Committee</a></li>
@@ -68,7 +73,7 @@
         </ul>
     </nav>
     <header>
-        <a href="index.html"><figure></figure></a>
+        <a href="index.html" aria-label="BDPS SITE"><figure></figure></a>
         <div class="menu-btn"><i id="menu-ico" class="fa-solid fa-bars"></i></div>
         <ul>
             <li><a href="" class="col-change"><i class="fa fa-graduation-cap"></i>Registration for Class XI 2022-2023</a></li>
@@ -89,61 +94,61 @@
         <div class="mySlides">
             <div class="numbertext">1 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img4.jpg" width="100%" alt="BDPS FRONT LOOK">
+            <img src="./static/img/heroes-section/img4.webp" width="100%" alt="BDPS FRONT LOOK">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">2 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img2.jpg" alt="CULTURAL PROGRAMME">
+            <img src="./static/img/heroes-section/img2.webp" alt="CULTURAL PROGRAMME">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">3 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img3.jpg" alt="CULTURAL PROGRAMME">
+            <img src="./static/img/heroes-section/img3.webp" alt="CULTURAL PROGRAMME">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">4 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img5.jpg" width="100%" alt="BDPS STUDENTS">
+            <img src="./static/img/heroes-section/img5.webp" width="100%" alt="BDPS STUDENTS">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">5 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img1.jpg" width="100%" alt="SAWAN MAHOTSAVA">
+            <img src="./static/img/heroes-section/img1.webp" width="100%" alt="SAWAN MAHOTSAVA">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">6 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img6.jpg" width="100%" alt="KBD TRAINING">
+            <img src="./static/img/heroes-section/img6.webp" width="100%" alt="KBD TRAINING">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">7 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img7.jpg" width="100%" alt="BDPS DIRECTOR">
+            <img src="./static/img/heroes-section/img7.webp" width="100%" alt="BDPS DIRECTOR">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">8 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img8.jpg" width="100%" alt="VOLLEYBALL MATCH">
+            <img src="./static/img/heroes-section/img8.webp" width="100%" alt="VOLLEYBALL MATCH">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">9 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img9.jpg" width="100%" alt="BDPS STUDENTS">
+            <img src="./static/img/heroes-section/img9.webp" width="100%" alt="BDPS STUDENTS">
         </div>
 
         <div class="mySlides">
             <div class="numbertext">10 / 10</div>
             <div class="title">B. D. Public School</div>
-            <img src="./img/heroes-section/img10.jpg" width="100%" alt="BDPS FAMILY">
+            <img src="./static/img/heroes-section/img10.webp" width="100%" alt="BDPS FAMILY">
         </div>
 
         <!-- Next and previous buttons -->
@@ -160,10 +165,26 @@
             </div>
             <div class="social-media">
                 <ul>
-                    <li title="twitter"><a href=""><i class="fa-brands fa-twitter"></i></i></a></li>
-                    <li title="facebook"><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li title="gplus"><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
-                    <li title="youtube"><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                    <li title="twitter">
+                        <a href="" aria-label="Visit Twitter Page">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li title="facebook">
+                        <a href="" aria-label="Visit Facebook Page">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li title="gplus">
+                        <a href="" aria-label="Visit Gplus Page">
+                            <i class="fa-brands fa-google-plus-g"></i>
+                        </a>
+                    </li>
+                    <li title="youtube">
+                        <a href="" aria-label="Visit Youtube Page">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -177,12 +198,12 @@
                 <h2>WELCOME TO <span style="color:rgb(144, 26, 168);">B.D PUBLIC SCHOOL</span></h2>
                 <p><b>B.D. Public School</b>, Affiliated to <b>CBSE</b>, is run under the aegis of Budha Vikash Samiti. The zenith which the school has been able to reach is largely due to the untiring effort and devotion of Shri Sheo Bihari Roy whose services the school still enjoys as its Director. Some eminent educationists, like <b>Dr. D.N. Mishra</b> (Rtd. Prof., Patna University, Patna) who out of a sense of devotion to the cause of education, spare some time regularly, to guide the students. The school is headed by an eminent Principal, Smt. Madhwi Kumari, who is an academician and sustains the students as a mother.</p>
                 <a href="#" id='read-more'>Read More</a>
-                <!-- <img src="./img/schoolbuilding.png" alt="School Building"> -->
+                <!-- <img src="./static/img/schoolbuilding.webp" alt="School Building"> -->
             </div>
             <div class="messages-section">
                 <div class="message"> 
                     <figure>  
-                        <img src="./img/director-image.jpg" alt="Director Image">
+                        <img src="./static/img/director-image.webp" alt="Director Image">
                     </figure>
                     <div class="content-div">
                         <div class="title">MESSAGE FROM DIRECTOR</div>
@@ -192,7 +213,7 @@
                 </div>
                 <div class="message">
                     <figure>  
-                        <img src="./img/principal-image.jpg" alt="Principal Image">
+                        <img src="./static/img/principal-image.webp" alt="Principal Image">
                     </figure>
                     <div class="content-div">
                         <div class="title">MESSAGE FROM PRINCIPAL</div>
@@ -410,7 +431,6 @@
         </div>
     </footer>
         <div class="copyright">© 2023 B.D Public School Design By : <span style='color:rgb(12, 201, 144);margin-left:1rem;'> Rakesh Jaiswal</span></div>
-    <script defer src="./js/jquery-min.js"></script>
-    <script defer src="./js/script.js"></script>
+    <script defer src='./static/js/script.js'></script>
 </body>
 </html>
