--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 about us<i class="fa fa-angle-down"></i>
                 <ul>
                     <li><a href="./pages/aims.html">Aims & Objectives</a></li>
-                    <li><a href="">Our Constitution</a></li>
+                    <li><a href="./pages/constitution.html">Our Constitution</a></li>
                     <li><a href="">Director Message</a></li>
                     <li><a href="">School Managing Committee</a></li>
                 </ul>
