--- a/pages/constitution.html
+++ b/pages/constitution.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AIMS & OBJECTIVES</title>
+    <title>Our Constitution</title>
     <link rel="stylesheet" href="../static/css/global.css">
     <link rel="stylesheet" href="../static/css/page.css">
-    <link rel="stylesheet" href="../static/css/aims.css">
+    <link rel="stylesheet" href="../static/css/constitution.css">
     <link rel="icon" type="image/x-icon" href="../static/img/bdps_logo_4.webp">
     <script defer src="https://kit.fontawesome.com/40bc81af5c.js" crossorigin="anonymous"></script>
 </head>
@@ -81,28 +81,53 @@
 </header>
     <div class="page-hero">
         <img src="../static/img/heroes-section/img10.webp" alt="OUR TEAM">
-        <h1>Aims & Objectives</h1>
+        <h1>Constitution</h1>
     </div>
     <div class="bread-crumb">
         <ol>
             <li class='active text-bold'><i class='fa fa-home'></i><a href='../index.html'>Home</a></li>
-            <li class='active'><a href='./aims.html'>Aims & Objectives</a></li>
+            <li class='active'><a href='./constitution.html'>Constitution</a></li>
         </ol>
     </div>
     <main>
-        <div class="content">
-        <p>
-            At <span class='text-bold'>B.D. PUBLIC SCHOOL</span>, we believe every child has the right to equality of opportunity and access to the whole curriculum. We aim to provide every child a learning environment:
-        </p>
-        <ul>
-            <li>is safe and secure, is exciting, stimulating, challenging and relevant.</li>
-            <li>develops the confidence and talent of each individual.</li>
-            <li>fosters esteem, self-awareness and motivate learners.</li>
-            <li>promotes the quality of resourceful,reflective and resilient,is appropriate and matched to individual needs.</li>
-            <li>offers a wide range of activities, and includes the requirement of National Curriculum.</li>
-        </ul>
-        </div>
-        <img height=30% width=30% src="../static/img/pages/aims.webp" alt="AIMS">
+        <section>
+            <div class="content">
+                <h1><span style='color:blueviolet;'>Preamble of</span> India</h1>
+                <ul>
+                    <li><span class='text-bold'>WE THE PEOPLE OF INDIA</span>, having solemnly resolved to constitute India into a <span class='text-bold'>SOVEREIGN SOCIALIST SECULAR DEMOCRATIC REPUBLIC</span> and to secure to all Its citizens:</li>
+                    <li><span class='text-bold'>JUSTICE</span>, Social, economic and political;</li>
+                    <li><span class='text-bold'>LIBERTY</span> of thought, expression, belief, faith and worship;</li>
+                    <li><span class='text-bold'>EQUALITY</span> of status and of opportunity and to promote among them all;</li>
+                    <li><span class='text-bold'>FRATERNITY</span> assuring the dignity of the individual and the unity and Integrity of the Nation;</li>
+                    <li><span class='text-bold'>IN OUR CONSTITUTION ASSEMBLY</span> this twenty-sixth day of November, 1949, do HEREBY ADOPT, ENACT AND</li>
+                    <li>GIVE TO OURSELVES THE CONSTITUTION. </li>
+                </ul>
+            </div>
+            <img style='max-height:10rem;' src="../static/img/pages/stamp.webp" alt="STAMP">
+        </section>
+        <section>
+            <div class="content">
+                <h1><span style='color:blueviolet;'>Constitution</span> India</h1>
+                <p>
+                    <h3 style='text-align:center;'>Part IV A (articles 51 A)<br>Fundamental Duties</h3>
+                    <h4>Fundamental Duties-It shall be the duty of every citizen of India:</h4>
+                </p>
+                <ul style='margin-top:2rem;'>
+                    <li>to abide by the constitution and respect its ideals and institutions, the National flag and the National Anthem;</li>
+                    <li>to cherish and follow the noble ideals which inspired our national struggle for freedom;</li>
+                    <li>to uphold and protect the sovereignty, unity and integrity of India;</li>
+                    <li>to defend the country and render national service when called upon to do so;</li>
+                    <li>to promote harmony and the spirit of common brotherhood amongst all the people of India transcending religious, linguistic and regional or sectional diversities; to renounce Practices derogatory to the dignity of women;</li>
+                    <li>to value and preserve the rich heritage of our composite culture;</li>
+                    <li>to protect and improve the natural environment including forests, lakes, rivers, wildlife, and to have compassion for living creatures;</li>
+                    <li>to develop the scientific temper, humanism and the spirit of inquiry and reform;</li>
+                    <li>to safeguard public property and to abjure violence;</li>
+                    <li>to strive towards excellence in all spheres of individuals and collective activity so that the nation constantly rises to higher levels of endeavor and achievement;</li>
+                    <li>who is parent or guardian, to provide opportunities for education to his child or, as the case may be, ward between the age of six and fourteen years;</li>
+                </ul>
+            </div>
+            <img style='max-height:499px;' src="../static/img/pages/constitution.webp" alt="CONSTITUTION">
+        </section>
     </main><footer>
     <div class="footer-sections">
         <div class="footer-section footer-section-1">
