--- a/pages/director-msg.html
+++ b/pages/director-msg.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Constitution</title>
+    <title>Director's Message</title>
     <link rel="stylesheet" href="../static/css/global.css">
     <link rel="stylesheet" href="../static/css/page.css">
-    <link rel="stylesheet" href="../static/css/constitution.css">
+    <link rel="stylesheet" href="../static/css/director-msg.css">
     <link rel="icon" type="image/x-icon" href="../static/img/bdps_logo_4.webp">
     <script defer src="https://kit.fontawesome.com/40bc81af5c.js" crossorigin="anonymous"></script>
 </head>
@@ -81,53 +81,23 @@
     </header>
     <div class="page-hero">
         <img src="../static/img/heroes-section/img10.webp" alt="OUR TEAM">
-        <h1>Constitution</h1>
+        <h1>Director's Message</h1>
     </div>
     <div class="bread-crumb">
         <ol>
             <li class='active text-bold'><i class='fa fa-home'></i><a href='../index.html'>Home</a></li>
-            <li class='active'><a href='./constitution.html'>Constitution</a></li>
+            <li class='active'><a href='./director-msg.html'>Director's Message</a></li>
         </ol>
     </div>
     <main>
-        <section>
-            <div class="content">
-                <h1><span class='text-highlight'>Preamble of</span> India</h1>
-                <ul>
-                    <li><span class='text-bold'>WE THE PEOPLE OF INDIA</span>, having solemnly resolved to constitute India into a <span class='text-bold'>SOVEREIGN SOCIALIST SECULAR DEMOCRATIC REPUBLIC</span> and to secure to all Its citizens:</li>
-                    <li><span class='text-bold'>JUSTICE</span>, Social, economic and political;</li>
-                    <li><span class='text-bold'>LIBERTY</span> of thought, expression, belief, faith and worship;</li>
-                    <li><span class='text-bold'>EQUALITY</span> of status and of opportunity and to promote among them all;</li>
-                    <li><span class='text-bold'>FRATERNITY</span> assuring the dignity of the individual and the unity and Integrity of the Nation;</li>
-                    <li><span class='text-bold'>IN OUR CONSTITUTION ASSEMBLY</span> this twenty-sixth day of November, 1949, do HEREBY ADOPT, ENACT AND</li>
-                    <li>GIVE TO OURSELVES THE CONSTITUTION. </li>
-                </ul>
-            </div>
-            <img style='max-height:10rem;' src="../static/img/pages/stamp.webp" alt="STAMP">
-        </section>
-        <section>
-            <div class="content">
-                <h1><span class='text-highlight''>Constitution</span> India</h1>
-                <p>
-                    <h3 style='text-align:center;'>Part IV A (articles 51 A)<br>Fundamental Duties</h3>
-                    <h4>Fundamental Duties-It shall be the duty of every citizen of India:</h4>
-                </p>
-                <ul style='margin-top:2rem;'>
-                    <li>to abide by the constitution and respect its ideals and institutions, the National flag and the National Anthem;</li>
-                    <li>to cherish and follow the noble ideals which inspired our national struggle for freedom;</li>
-                    <li>to uphold and protect the sovereignty, unity and integrity of India;</li>
-                    <li>to defend the country and render national service when called upon to do so;</li>
-                    <li>to promote harmony and the spirit of common brotherhood amongst all the people of India transcending religious, linguistic and regional or sectional diversities; to renounce Practices derogatory to the dignity of women;</li>
-                    <li>to value and preserve the rich heritage of our composite culture;</li>
-                    <li>to protect and improve the natural environment including forests, lakes, rivers, wildlife, and to have compassion for living creatures;</li>
-                    <li>to develop the scientific temper, humanism and the spirit of inquiry and reform;</li>
-                    <li>to safeguard public property and to abjure violence;</li>
-                    <li>to strive towards excellence in all spheres of individuals and collective activity so that the nation constantly rises to higher levels of endeavor and achievement;</li>
-                    <li>who is parent or guardian, to provide opportunities for education to his child or, as the case may be, ward between the age of six and fourteen years;</li>
-                </ul>
-            </div>
-            <img style='max-height:499px;' src="../static/img/pages/constitution.webp" alt="CONSTITUTION">
-        </section>
+        <div class="content">
+            <h2><span class='text-highlight'>Director's</span> Message</h2>
+            <p>It gives me immense pleasure to acknowledge with gratitude the recognition and appreciation this B.D. Public School has earned over the years. An institution is known by the magnificence of its building but by the quality of the student it prepares and send to enable them to carve a place for themselves in the wild world. It has been our endeavor in this school to provide the best possible education to the children through a congenial conducive academic environment reflected through qualified teachers, meaningful activities, inward sense of discipline amongst all the inmates and overall desire to pursue excellence in the field of education .Of late, there has been a drastic change in the education policy of the government. Continuous and comprehensive evaluation system examination has been introduced by the C.B.S.E. with so many challenges for the schools. We have tried our best to cope with the new situation successfully. And with the passage of time tremendous use of technology in the field of education has come into being and our school on this score also does not log behind. Installation of CCTV cameras and introduction of smart classes are its examples. The support given to me by the parents, teachers and the well – wishers has enabled me to move ahead and make B.D. Public School a centre of excellence. I hope in the years to come B.D. Public School will further earn the accolade of the students and the parents and thus , justify the trust reposed in the school by all the concerned.</p>
+        </div>
+        <figure>
+            <img src="../static/img/director-msg.webp" alt="Director">
+            <div class='caption'><div class='text-highlight text-bold'>Sheo Bihari Roy</div><div class='text-bold'>DIRECTOR</div></div>
+        </figure>
     </main>
     <footer>
         <div class="footer-sections">
