--- a/index.html
+++ b/index.html
@@ -23,32 +23,31 @@
                 <ul>
                     <li><a href="./pages/aims.html">Aims & Objectives</a></li>
                     <li><a href="./pages/constitution.html">Our Constitution</a></li>
-                    <li><a href="">Director Message</a></li>
-                    <li><a href="">School Managing Committee</a></li>
+                    <li><a href="./pages/director-msg.html">Director Message</a></li>
+                    <li><a href="./downloads/nav-downloads/SMC.pdf">School Managing Committee</a></li>
                 </ul>
             </li>
             <li class="dropdown-nav-li">
                 school info<i class="fa fa-angle-down"></i>
                 <ul>
-                    <li><a href="">school profile</a></li>
-                    <li><a href="">affidavit/declaration</a></li>
-                    <li><a href="">school advisory board</a></li>
+                    <li><a href="./downloads/nav-downloads/SchoolInfo.pdf">school profile</a></li>
+                    <li><a href="./downloads/nav-downloads/Affidavit.pdf">affidavit/declaration</a></li>
                 </ul>
             </li>
             <li class="dropdown-nav-li">
                 academics<i class="fa fa-angle-down"></i>
                 <ul>
-                    <li><a href="">academic calender</a></li>
-                    <li><a href="">teachers list</a></li>
+                    <li><a href="./downloads/nav-downloads/Academic Calender.pdf">academic calender</a></li>
+                    <li><a href="./downloads/nav-downloads/Teachers List.pdf">teachers list</a></li>
                     <li><a href="">book list</a></li>
-                    <li><a href="">academic achievements</a></li>
+                    <li><a href="./downloads/nav-downloads/RESULTANAL.pdf">academic achievements</a></li>
                     <li><a href="">code of conduct for students</a></li>
                     <li><a href="">advice to parents</a></li>
-                    <li><a href="">activities&competitions</a></li>
-                    <li><a href="">annual sports meet</a></li>
-                    <li><a href="">exam schedule</a></li>
-                    <li><a href="">school uniform</a></li>
-                    <li><a href="">holiday list</a></li>
+                    <li><a href="./downloads/nav-downloads/Activities and Competitions.pdf">activities&competitions</a></li>
+                    <li><a href="./downloads/nav-downloads/Annual Sports Meet.pdf">annual sports meet</a></li>
+                    <li><a href="./downloads/nav-downloads/Exam Schedule.pdf">exam schedule</a></li>
+                    <li><a href="./downloads/nav-downloads/School Uniform.pdf">school uniform</a></li>
+                    <li><a href="./downloads/nav-downloads/Holiday List.pdf">holiday list</a></li>
                 </ul>
             </li>
             <li class="dropdown-nav-li">
