--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="">book list</a></li>
                     <li><a href="./downloads/nav-downloads/RESULTANAL.pdf">academic achievements</a></li>
                     <li><a href="">code of conduct for students</a></li>
-                    <li><a href="">advice to parents</a></li>
+                    <li><a href="./pages/advice-to-parents.html">advice to parents</a></li>
                     <li><a href="./downloads/nav-downloads/Activities and Competitions.pdf">activities&competitions</a></li>
                     <li><a href="./downloads/nav-downloads/Annual Sports Meet.pdf">annual sports meet</a></li>
                     <li><a href="./downloads/nav-downloads/Exam Schedule.pdf">exam schedule</a></li>
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="school-prospectus">
-            <a href="">School Prospectus</a>
+            <a href="./downloads/nav-downloads/SchoolInfo.pdf">School Prospectus</a>
         </div>
     </div>
     <section class='section-1'>
@@ -207,7 +207,7 @@
                     <div class="content-div">
                         <div class="title">MESSAGE FROM DIRECTOR</div>
                         <div class="content">It gives me immense pleasure to acknowledge with gratitude the recognition and appreciation this <b>B.D. Public School</b> has earned over the years. An Institution is known not by the magnificence....</div>
-                        <a href='' class="read-more">Read More ></a>
+                        <a href='./pages/director-msg.html' class="read-more">Read More ></a>
                     </div>
                 </div>
                 <div class="message">
@@ -377,11 +377,11 @@
                 <h2>QUICK LINKS</h2>
                 <div class="content">
                     <ul>
-                        <li>About Us</li>
-                        <li>Facility</li>
-                        <li>Admission</li>
-                        <li>Admission Enquiry</li>
-                        <li>Contact Us</li>
+                        <li><a href='./pages/aims.html'>About Us</a></li>
+                        <li><a href=''>Facility</a></li>
+                        <li><a href='./downloads/nav-downloads/Exam Schedule.pdf'>Exam Schedule</a></li>
+                        <li><a href=''>Admission Enquiry</a></li>
+                        <li><a href=''>Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -389,8 +389,8 @@
                 <h2>GALLERY</h2>
                 <div class="content">
                     <ul>
-                        <li>Photo Gallery</li>
-                        <li>Video Gallery</li>
+                        <li><a href=''>Photo Gallery</a></li>
+                        <li><a href=''>Video Gallery</a></li>
                     </ul>
                 </div>
             </div>
@@ -421,7 +421,7 @@
                         </li>
                         <li>
                             <label for="email">Email: </label>
-                            <p name='email'>bdpschool@rediffmail.com</p>
+                            <p name='email'><a href='mailto:bdpschool@rediffmail.com'>bdpschool@rediffmail.com</a></p>
                             <br>
                         </li>
                     </ul>
@@ -429,7 +429,7 @@
             </div>
         </div>
     </footer>
-        <div class="copyright">© 2023 B.D Public School Design By : <span style='color:rgb(12, 201, 144);margin-left:1rem;'> Rakesh Jaiswal</span></div>
+        <div class="copyright">© 2023 B.D Public School Design By :  <a style='color:rgb(12, 201, 144);margin-left:1rem;text-decoration:none;' href='https://rakesh-sudo-stack.github.io'>Rakesh Jaiswal</a> </div>
     <script defer src='./static/js/script.js'></script>
 </body>
 </html>
