--- a/pages/advice-to-parents.html
+++ b/pages/advice-to-parents.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Constitution</title>
+    <title>Advice To Parents</title>
     <link rel="stylesheet" href="../static/css/global.css">
     <link rel="stylesheet" href="../static/css/page.css">
-    <link rel="stylesheet" href="../static/css/constitution.css">
+    <link rel="stylesheet" href="../static/css/advice-to-parents.css">
     <link rel="icon" type="image/x-icon" href="../static/img/bdps_logo_4.webp">
     <script defer src="https://kit.fontawesome.com/40bc81af5c.js" crossorigin="anonymous"></script>
 </head>
@@ -81,53 +81,29 @@
     </header>
     <div class="page-hero">
         <img src="../static/img/heroes-section/img10.webp" alt="OUR TEAM">
-        <h1>Constitution</h1>
+        <h1>Advice To Parents</h1>
     </div>
     <div class="bread-crumb">
         <ol>
             <li class='active text-bold'><i class='fa fa-home'></i><a href='../index.html'>Home</a></li>
-            <li class='active'><a href='./constitution.html'>Constitution</a></li>
+            <li class='active'><a href='./advice-to-parents.html'>Advice To Parents</a></li>
         </ol>
     </div>
     <main>
-        <section>
-            <div class="content">
-                <h1><span class='text-highlight'>Preamble of</span> India</h1>
-                <ul>
-                    <li><span class='text-bold'>WE THE PEOPLE OF INDIA</span>, having solemnly resolved to constitute India into a <span class='text-bold'>SOVEREIGN SOCIALIST SECULAR DEMOCRATIC REPUBLIC</span> and to secure to all Its citizens:</li>
-                    <li><span class='text-bold'>JUSTICE</span>, Social, economic and political;</li>
-                    <li><span class='text-bold'>LIBERTY</span> of thought, expression, belief, faith and worship;</li>
-                    <li><span class='text-bold'>EQUALITY</span> of status and of opportunity and to promote among them all;</li>
-                    <li><span class='text-bold'>FRATERNITY</span> assuring the dignity of the individual and the unity and Integrity of the Nation;</li>
-                    <li><span class='text-bold'>IN OUR CONSTITUTION ASSEMBLY</span> this twenty-sixth day of November, 1949, do HEREBY ADOPT, ENACT AND</li>
-                    <li>GIVE TO OURSELVES THE CONSTITUTION. </li>
-                </ul>
-            </div>
-            <img style='max-height:10rem;' src="../static/img/pages/stamp.webp" alt="STAMP">
-        </section>
-        <section>
-            <div class="content">
-                <h1><span class='text-highlight''>Constitution</span> India</h1>
-                <p>
-                    <h3 style='text-align:center;'>Part IV A (articles 51 A)<br>Fundamental Duties</h3>
-                    <h4>Fundamental Duties-It shall be the duty of every citizen of India:</h4>
-                </p>
-                <ul style='margin-top:2rem;'>
-                    <li>to abide by the constitution and respect its ideals and institutions, the National flag and the National Anthem;</li>
-                    <li>to cherish and follow the noble ideals which inspired our national struggle for freedom;</li>
-                    <li>to uphold and protect the sovereignty, unity and integrity of India;</li>
-                    <li>to defend the country and render national service when called upon to do so;</li>
-                    <li>to promote harmony and the spirit of common brotherhood amongst all the people of India transcending religious, linguistic and regional or sectional diversities; to renounce Practices derogatory to the dignity of women;</li>
-                    <li>to value and preserve the rich heritage of our composite culture;</li>
-                    <li>to protect and improve the natural environment including forests, lakes, rivers, wildlife, and to have compassion for living creatures;</li>
-                    <li>to develop the scientific temper, humanism and the spirit of inquiry and reform;</li>
-                    <li>to safeguard public property and to abjure violence;</li>
-                    <li>to strive towards excellence in all spheres of individuals and collective activity so that the nation constantly rises to higher levels of endeavor and achievement;</li>
-                    <li>who is parent or guardian, to provide opportunities for education to his child or, as the case may be, ward between the age of six and fourteen years;</li>
-                </ul>
-            </div>
-            <img style='max-height:499px;' src="../static/img/pages/constitution.webp" alt="CONSTITUTION">
-        </section>
+        <h2 class='text-highlight col-change text-bold'>Advice to Parents</h2>
+        <ul>
+            <li>The school authorities rely upon the full co-operation of the parents and guardians in all the matters related to the education of their wards.</li>
+            <li>Children are required to come to the school five minutes before the scheduled time.</li>
+            <li>Parents or guardian must see the teacher’s remarks and the homework given in the school diary everyday and see that the work is done properly and neatly.</li>
+            <li>Student’s absence must be explained in an application to the Principal duly signed by the parents/guardians.</li>
+            <li>Children are expected to be regular to their classes for better results and performances.</li>
+            <li>Parents/Guardians are advised to attend the Parent – Teacher’s Meet held on the 2nd Saturday every month between 11:30 am to 1 pm.</li>
+            <li>Parents/Guardians are advised to dress their children well before their departure for school.</li>
+            <li>Parents/Guardians are required to pay the school fee of their sons/wards on time for the smooth functioning of the school administration.</li>
+            <li>Any change in the address of the children, parents or guardians should be intimated to the school office within a week.</li>
+            <li>Parents/Guardians are advised to take every care of their children at home also to help in their all-round development.</li>
+            <li>If parents/guardians get any information regarding their wards through letter of diary, they should meet the Principal immediately.</li>
+        </ul>
     </main>
     <footer>
         <div class="footer-sections">
