--- a/pages/director-msg.html
+++ b/pages/director-msg.html
@@ -39,7 +39,7 @@
                     <li><a href="">book list</a></li>
                     <li><a href="../downloads/nav-downloads/RESULTANAL.pdf">academic achievements</a></li>
                     <li><a href="">code of conduct for students</a></li>
-                    <li><a href="">advice to parents</a></li>
+                    <li><a href="./advice-to-parents.html">advice to parents</a></li>
                     <li><a href="../downloads/nav-downloads/Activities and Competitions.pdf">activities&competitions</a></li>
                     <li><a href="../downloads/nav-downloads/Annual Sports Meet.pdf">annual sports meet</a></li>
                     <li><a href="../downloads/nav-downloads/Exam Schedule.pdf">exam schedule</a></li>
@@ -112,11 +112,11 @@
                 <h2>QUICK LINKS</h2>
                 <div class="content">
                     <ul>
-                        <li>About Us</li>
-                        <li>Facility</li>
-                        <li>Admission</li>
-                        <li>Admission Enquiry</li>
-                        <li>Contact Us</li>
+                        <li><a href='./aims.html'>About Us</a></li>
+                        <li><a href=''>Facility</a></li>
+                        <li><a href='../downloads/nav-downloads/Exam Schedule.pdf'>Exam Schedule</a></li>
+                        <li><a href=''>Admission Enquiry</a></li>
+                        <li><a href=''>Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -124,8 +124,8 @@
                 <h2>GALLERY</h2>
                 <div class="content">
                     <ul>
-                        <li>Photo Gallery</li>
-                        <li>Video Gallery</li>
+                        <li><a href=''>Photo Gallery</a></li>
+                        <li><a href=''>Video Gallery</a></li>
                     </ul>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                         </li>
                         <li>
                             <label for="email">Email: </label>
-                            <p name='email'>bdpschool@rediffmail.com</p>
+                            <p name='email'><a href='mailto:bdpschool@rediffmail.com'>bdpschool@rediffmail.com</a></p>
                             <br>
                         </li>
                     </ul>
