--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         </a>
                     </li>
                     <li title="facebook">
-                        <a href="" aria-label="Visit Facebook Page">
+                        <a href="https://www.facebook.com/bdpublicschoolbuddhacolonypatna" aria-label="Visit Facebook Page">
                             <i class="fa-brands fa-facebook-f"></i>
                         </a>
                     </li>
@@ -180,7 +180,7 @@
                         </a>
                     </li>
                     <li title="youtube">
-                        <a href="" aria-label="Visit Youtube Page">
+                        <a href="https://www.youtube.com/@b.d.publicschool9738" aria-label="Visit Youtube Page">
                             <i class="fa-brands fa-youtube"></i>
                         </a>
                     </li>
